# xpcourses-data-analysis

./: .gitignore  README.md  parameters.yaml  pyproject.toml
notebooks/: 01-technical-case.ipynb
src/: utils.py
