[project]
name = "xpcourses-data-analysis"
version = "0.1.0"
description = "Data analysis case of XPCourses, a digital product distribution and sales platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyperclip>=1.9.0",
]
